Add SiliconFlow embeddings and DeepSeek chat wrappers

--- a/full_basic_rag.ipynb
+++ b/full_basic_rag.ipynb
@@ -158,12 +158,12 @@
    "outputs": [],
    "source": [
     "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "openai_model = \"gpt-3.5-turbo\"\n",
+    "deepseek_model = \"deepseek-chat\"\n",
     "\n",
     "#Pinecone keys\n",
     "os.environ['PINECONE_API_KEY'] = pinecone_api_key\n",
     "os.environ['PINECONE_API_HOST'] = pinecone_api_host\n",
-    "os.environ['PINECONE_INDEX_NAME'] = index_name"
+    "os.environ['PINECONE_INDEX_NAME'] = index_name\n"
    ]
   },
   {
@@ -207,12 +207,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
+    "from integrations.deepseek import DeepSeekChat\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_pinecone import PineconeVectorStore\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
     "#### INDEXING ####\n",
@@ -229,7 +234,7 @@
     "# Embed\n",
     "vectorstore = PineconeVectorStore.from_documents(\n",
     "    documents=splits, \n",
-    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"), \n",
+    "    embedding=SiliconFlowEmbeddings(model=\"BAAI/bge-m3\"), \n",
     "    index_name=index_name\n",
     ")\n",
     "\n",
@@ -247,7 +252,7 @@
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=openai_model, temperature=0.1)\n",
+    "llm = DeepSeekChat(model=deepseek_model, temperature=0.1)\n",
     "\n",
     "# Post-processing\n",
     "def format_docs(docs):\n",
@@ -259,7 +264,7 @@
     "    | prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
-    ")"
+    ")\n"
    ]
   },
   {
