--- a/notebooks/[4]_rag_indexing_and_advanced_retrieval.ipynb
+++ b/notebooks/[4]_rag_indexing_and_advanced_retrieval.ipynb
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "openai_model = \"gpt-3.5-turbo\""
+    "deepseek_model = \"deepseek-chat\"\n"
    ]
   },
   {
@@ -242,21 +242,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.deepseek import DeepSeekChat\n",
     "import uuid\n",
     "\n",
     "from langchain_core.documents import Document\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "chain = (\n",
     "    {\"doc\": lambda x: x.page_content}\n",
     "    | ChatPromptTemplate.from_template(\"Summarize the following document:\\n\\n{doc}\")\n",
-    "    | ChatOpenAI(model=\"gpt-3.5-turbo\",max_retries=0)\n",
+    "    | DeepSeekChat(model=\"deepseek-chat\",max_retries=0)\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "summaries = chain.batch(docs, {\"max_concurrency\": 5})"
+    "summaries = chain.batch(docs, {\"max_concurrency\": 5})\n"
    ]
   },
   {
@@ -275,14 +279,18 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
     "from langchain.storage import InMemoryByteStore\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain.retrievers.multi_vector import MultiVectorRetriever\n",
     "\n",
     "# The vectorstore to use to index the child chunks\n",
     "vectorstore = Chroma(collection_name=\"summaries\",\n",
-    "                     embedding_function=OpenAIEmbeddings())\n",
+    "                     embedding_function=SiliconFlowEmbeddings())\n",
     "\n",
     "# The storage layer for the parent documents\n",
     "store = InMemoryByteStore()\n",
@@ -304,7 +312,7 @@
     "\n",
     "# Add\n",
     "retriever.vectorstore.add_documents(summary_docs)\n",
-    "retriever.docstore.mset(list(zip(doc_ids, docs)))"
+    "retriever.docstore.mset(list(zip(doc_ids, docs)))\n"
    ]
   },
   {
@@ -535,7 +543,7 @@
       "  return torch.cuda.amp.autocast() if self.activated else NullContextManager()\n",
       "/Users/taha/Projects/BragAI/code/gh/bRAG-langchain/venv/lib/python3.11/site-packages/torch/amp/autocast_mode.py:270: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
       "  warnings.warn(\n",
-      "100%|██████████| 4/4 [00:03<00:00,  1.30it/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4/4 [00:03<00:00,  1.30it/s]"
      ]
     },
     {
@@ -582,9 +590,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.68it/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4/4 [00:02<00:00,  1.68it/s]\n",
       "1it [00:02,  2.42s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 1700.85it/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1/1 [00:00<00:00, 1700.85it/s]"
      ]
     },
     {
@@ -601,7 +609,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 2048/2048 [00:00<00:00, 214920.30it/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 2048/2048 [00:00<00:00, 214920.30it/s]"
      ]
     },
     {
@@ -660,7 +668,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 2688.66it/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1/1 [00:00<00:00, 2688.66it/s]"
      ]
     },
     {
@@ -675,7 +683,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 1/1 [00:00<00:00, 351.84it/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1/1 [00:00<00:00, 351.84it/s]"
      ]
     },
     {
@@ -723,12 +731,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'content': '=== Studio Ghibli ===\\n\\n\\n==== Foundation and Laputa (1985–1987) ====\\n\\nFollowing the success of Nausicaä of the Valley of the Wind, Miyazaki and Takahata founded the animation production company Studio Ghibli on June 15, 1985, as a subsidiary of Tokuma Shoten, with offices in Kichijōji designed by Miyazaki. The studio\\'s name had been registered a year earlier; Miyazaki named it after the nickname of the Caproni Ca.309 aircraft, meaning \"a hot wind that blows in the desert\" in Italian.',\n",
+       "[{'content': '=== Studio Ghibli ===\\n\\n\\n==== Foundation and Laputa (1985\u20131987) ====\\n\\nFollowing the success of Nausica\u00e4 of the Valley of the Wind, Miyazaki and Takahata founded the animation production company Studio Ghibli on June 15, 1985, as a subsidiary of Tokuma Shoten, with offices in Kichij\u014dji designed by Miyazaki. The studio\\'s name had been registered a year earlier; Miyazaki named it after the nickname of the Caproni Ca.309 aircraft, meaning \"a hot wind that blows in the desert\" in Italian.',\n",
        "  'score': 25.73267364501953,\n",
        "  'rank': 1,\n",
        "  'document_id': '08d3b851-53c3-4678-815f-907c724abdf4',\n",
        "  'passage_id': 42},\n",
-       " {'content': 'Hayao Miyazaki (宮崎 駿 or 宮﨑 駿, Miyazaki Hayao; [mijaꜜzaki hajao]; born January 5, 1941) is a Japanese animator, filmmaker, and manga artist. He co-founded Studio Ghibli and serves as its honorary chairman. Throughout his career, Miyazaki has attained international acclaim as a masterful storyteller and creator of Japanese animated feature films, and is widely regarded as one of the most accomplished filmmakers in the history of animation.\\nBorn in Tokyo City, Miyazaki expressed interest in manga and animation from an early age.',\n",
+       " {'content': 'Hayao Miyazaki (\u5bae\u5d0e \u99ff or \u5bae\ufa11 \u99ff, Miyazaki Hayao; [mija\ua71czaki hajao]; born January 5, 1941) is a Japanese animator, filmmaker, and manga artist. He co-founded Studio Ghibli and serves as its honorary chairman. Throughout his career, Miyazaki has attained international acclaim as a masterful storyteller and creator of Japanese animated feature films, and is widely regarded as one of the most accomplished filmmakers in the history of animation.\\nBorn in Tokyo City, Miyazaki expressed interest in manga and animation from an early age.',\n",
        "  'score': 25.50719451904297,\n",
        "  'rank': 2,\n",
        "  'document_id': '08d3b851-53c3-4678-815f-907c724abdf4',\n",
@@ -769,8 +777,8 @@
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='=== Studio Ghibli ===\\n\\n\\n==== Foundation and Laputa (1985–1987) ====\\n\\nFollowing the success of Nausicaä of the Valley of the Wind, Miyazaki and Takahata founded the animation production company Studio Ghibli on June 15, 1985, as a subsidiary of Tokuma Shoten, with offices in Kichijōji designed by Miyazaki. The studio\\'s name had been registered a year earlier; Miyazaki named it after the nickname of the Caproni Ca.309 aircraft, meaning \"a hot wind that blows in the desert\" in Italian.'),\n",
-       " Document(page_content='Hayao Miyazaki (宮崎 駿 or 宮﨑 駿, Miyazaki Hayao; [mijaꜜzaki hajao]; born January 5, 1941) is a Japanese animator, filmmaker, and manga artist. He co-founded Studio Ghibli and serves as its honorary chairman. Throughout his career, Miyazaki has attained international acclaim as a masterful storyteller and creator of Japanese animated feature films, and is widely regarded as one of the most accomplished filmmakers in the history of animation.\\nBorn in Tokyo City, Miyazaki expressed interest in manga and animation from an early age.'),\n",
+       "[Document(page_content='=== Studio Ghibli ===\\n\\n\\n==== Foundation and Laputa (1985\u20131987) ====\\n\\nFollowing the success of Nausica\u00e4 of the Valley of the Wind, Miyazaki and Takahata founded the animation production company Studio Ghibli on June 15, 1985, as a subsidiary of Tokuma Shoten, with offices in Kichij\u014dji designed by Miyazaki. The studio\\'s name had been registered a year earlier; Miyazaki named it after the nickname of the Caproni Ca.309 aircraft, meaning \"a hot wind that blows in the desert\" in Italian.'),\n",
+       " Document(page_content='Hayao Miyazaki (\u5bae\u5d0e \u99ff or \u5bae\ufa11 \u99ff, Miyazaki Hayao; [mija\ua71czaki hajao]; born January 5, 1941) is a Japanese animator, filmmaker, and manga artist. He co-founded Studio Ghibli and serves as its honorary chairman. Throughout his career, Miyazaki has attained international acclaim as a masterful storyteller and creator of Japanese animated feature films, and is widely regarded as one of the most accomplished filmmakers in the history of animation.\\nBorn in Tokyo City, Miyazaki expressed interest in manga and animation from an early age.'),\n",
        " Document(page_content=\"Miyazaki, initially reluctant, countered that an hour-long animation would be more suitable, and Tokuma Shoten agreed on a feature-length film.\\nProduction began on May 31, 1983, with animation beginning in August; funding was provided through a joint venture between Tokuma Shoten and the advertising agency Hakuhodo, for whom Miyazaki's youngest brother worked. Animation studio Topcraft was chosen as the production house. Miyazaki found some of Topcraft's staff unreliable, and brought on several of his previous collaborators, including Takahata, who served as producer, though he was reluctant to do so. Pre-production began on May 31, 1983; Miyazaki encountered difficulties in creating the screenplay, with only sixteen chapters of the manga to work with.\")]"
       ]
      },
