--- a/notebooks/[5]_rag_retrieval_and_reranking.ipynb
+++ b/notebooks/[5]_rag_retrieval_and_reranking.ipynb
@@ -175,9 +175,9 @@
    "outputs": [],
    "source": [
     "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "openai_model = \"gpt-3.5-turbo\"\n",
+    "deepseek_model = \"deepseek-chat\"\n",
     "\n",
-    "os.environ['COHERE_API_KEY'] = cohere_api_key"
+    "os.environ['COHERE_API_KEY'] = cohere_api_key\n"
    ]
   },
   {
@@ -212,6 +212,11 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
     "#### INDEXING ####\n",
     "\n",
     "# Load blog\n",
@@ -237,15 +242,14 @@
     "splits = text_splitter.split_documents(blog_docs)\n",
     "\n",
     "# Index\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "# from langchain_cohere import CohereEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "vectorstore = Chroma.from_documents(documents=splits, \n",
     "                                    # embedding=CohereEmbeddings()\n",
-    "                                    embedding=OpenAIEmbeddings())\n",
+    "                                    embedding=SiliconFlowEmbeddings())\n",
     "\n",
     "\n",
-    "retriever = vectorstore.as_retriever()"
+    "retriever = vectorstore.as_retriever()\n"
    ]
   },
   {
@@ -271,15 +275,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.deepseek import DeepSeekChat\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "generate_queries = (\n",
     "    prompt_rag_fusion \n",
-    "    | ChatOpenAI(temperature=0)\n",
+    "    | DeepSeekChat(temperature=0)\n",
     "    | StrOutputParser() \n",
     "    | (lambda x: x.split(\"\\n\"))\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -377,7 +385,7 @@
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0)\n",
+    "llm = DeepSeekChat(temperature=0)\n",
     "\n",
     "final_rag_chain = (\n",
     "    {\"context\": retrieval_chain_rag_fusion, \n",
@@ -387,7 +395,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "final_rag_chain.invoke({\"question\":question})"
+    "final_rag_chain.invoke({\"question\":question})\n"
    ]
   },
   {
