--- a/notebooks/[1]_rag_setup_overview.ipynb
+++ b/notebooks/[1]_rag_setup_overview.ipynb
@@ -252,6 +252,12 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
+    "from integrations.deepseek import DeepSeekChat\n",
     "from pprint import pprint\n",
     "import bs4\n",
     "\n",
@@ -261,7 +267,6 @@
     "from langchain_pinecone import PineconeVectorStore\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
     "\n",
     "#### INDEXING ####\n",
     "\n",
@@ -283,7 +288,7 @@
     "# Embed\n",
     "vectorstore = PineconeVectorStore.from_documents(\n",
     "    documents=splits, \n",
-    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"), \n",
+    "    embedding=SiliconFlowEmbeddings(model=\"BAAI/bge-m3\"), \n",
     "    index_name=index_name\n",
     ")\n",
     "\n",
@@ -295,7 +300,7 @@
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)\n",
+    "llm = DeepSeekChat(model=\"deepseek-chat\", temperature=0.1)\n",
     "\n",
     "# Post-processing\n",
     "def format_docs(docs):\n",
@@ -310,7 +315,7 @@
     ")\n",
     "\n",
     "# Question\n",
-    "pprint(rag_chain.invoke(\"How does LangChain use vector stores for efficient data retrieval?\"))"
+    "pprint(rag_chain.invoke(\"How does LangChain use vector stores for efficient data retrieval?\"))\n"
    ]
   },
   {
@@ -403,11 +408,15 @@
     }
    ],
    "source": [
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "embd = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
+    "embd = SiliconFlowEmbeddings(model=\"BAAI/bge-m3\")\n",
     "query_result = embd.embed_query(question)\n",
     "document_result = embd.embed_query(document)\n",
-    "len(query_result)"
+    "len(query_result)\n"
    ]
   },
   {
@@ -537,17 +546,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
     "# Index\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_pinecone import PineconeVectorStore\n",
     "\n",
     "vectorstore = PineconeVectorStore.from_documents(\n",
     "    documents=splits, \n",
-    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"), \n",
+    "    embedding=SiliconFlowEmbeddings(model=\"BAAI/bge-m3\"), \n",
     "    index_name=index_name\n",
     ")\n",
     "\n",
-    "retriever = vectorstore.as_retriever()"
+    "retriever = vectorstore.as_retriever()\n"
    ]
   },
   {
@@ -565,17 +578,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.siliconflow import SiliconFlowEmbeddings\n",
     "# Index\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_pinecone import PineconeVectorStore\n",
     "\n",
     "vectorstore = PineconeVectorStore.from_documents(\n",
     "    documents=splits, \n",
-    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"), \n",
+    "    embedding=SiliconFlowEmbeddings(model=\"BAAI/bge-m3\"), \n",
     "    index_name=index_name\n",
     ")\n",
     "\n",
-    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 1})"
+    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 1})\n"
    ]
   },
   {
@@ -642,7 +659,11 @@
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path.cwd() / 'src'))\n",
+    "\n",
+    "from integrations.deepseek import DeepSeekChat\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
     "# Prompt\n",
@@ -653,7 +674,7 @@
     "\"\"\"\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
-    "prompt"
+    "prompt\n"
    ]
   },
   {
@@ -664,7 +685,7 @@
    "outputs": [],
    "source": [
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)"
+    "llm = DeepSeekChat(model=\"deepseek-chat\", temperature=0.1)\n"
    ]
   },
   {
